# learncmake

app/: CMakeLists.txt
calc/: CMakeLists.txt
